--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button{
 <h2>Offline Bulk UPI QR Generator</h2>
 
 <p style="text-align:center">
-Har line me ek UPI ID likho
+Har line me ek UPI ID likho Creted by Ajay
 </p>
 
 <textarea id="vpaList" rows="8" placeholder="example@upi"></textarea>
