--- a/index.html
+++ b/index.html
@@ -1,229 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Offline Bulk UPI QR Generator</title>
-
-<style>
-
-body{
-  font-family: Arial, sans-serif;
-  padding:20px;
-  background:#f2f2f2;
-}
-
-h2{
-  text-align:center;
-}
-
-textarea,button{
-  width:100%;
-  max-width:600px;
-  margin:10px auto;
-  display:block;
-  padding:10px;
-  font-size:15px;
-}
-
-button{
-  cursor:pointer;
-}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(180px,1fr));
-  gap:15px;
-  margin-top:20px;
-}
-
-.card{
-  background:#fff;
-  border:1px solid #ccc;
-  padding:10px;
-  text-align:center;
-  border-radius:6px;
-}
-
-/* QR Border + Quiet Zone */
-.qr-box{
-  background:white;
-  padding:12px;
-  border:2px solid #000;
-  display:inline-block;
-  margin:5px 0;
-}
-
-</style>
-</head>
-
-<body>
-
-<h2>Offline Bulk UPI QR Generator</h2>
-
-<p style="text-align:center">
-Har line me ek UPI ID likho Creted by Ajay
-</p>
-
-<textarea id="vpaList" rows="8" placeholder="example@upi"></textarea>
-
-<button onclick="generateAll()">Generate QR</button>
-
-<div id="output" class="grid"></div>
-
-
-<!-- QR Library (Online CDN) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
-
-<script>
-
-function generateAll(){
-
-  const list =
-    document.getElementById("vpaList")
-    .value
-    .split(/\n+/);
-
-  const out =
-    document.getElementById("output");
-
-  out.innerHTML = "";
-
-
-  list.forEach(vpa => {
-
-    vpa = vpa.trim();
-
-    if(!vpa) return;
-
-
-    /* Card */
-    const card =
-      document.createElement("div");
-
-    card.className = "card";
-
-
-    /* Label */
-    const label =
-      document.createElement("div");
-
-    label.textContent = vpa;
-
-
-    /* QR Wrapper */
-    const qrWrapper =
-      document.createElement("div");
-
-    qrWrapper.className = "qr-box";
-
-
-    const qrBox =
-      document.createElement("div");
-
-
-    /* ✅ FIXED UPI LINK (NO %40) */
-    const upiLink =
-      "upi://pay?pa=" + vpa +
-      "&pn=Payment&cu=INR";
-
-
-    /* Generate QR */
-    new QRCode(qrBox,{
-
-      text: upiLink,
-
-      width:160,
-      height:160,
-
-      colorDark:"#000000",
-      colorLight:"#ffffff",
-
-      correctLevel: QRCode.CorrectLevel.H
-
-    });
-
-
-    qrWrapper.appendChild(qrBox);
-
-
-    /* Download Button */
-    const btn =
-      document.createElement("button");
-
-    btn.textContent = "Download";
-
-
-    btn.onclick = ()=>{
-
-      const canvas =
-        qrBox.querySelector("canvas");
-
-
-      /* Create New Canvas with Border */
-      const newCanvas =
-        document.createElement("canvas");
-
-
-      const size =
-        canvas.width + 40;
-
-
-      newCanvas.width = size;
-      newCanvas.height = size;
-
-
-      const ctx =
-        newCanvas.getContext("2d");
-
-
-      /* White Background */
-      ctx.fillStyle = "#ffffff";
-      ctx.fillRect(0,0,size,size);
-
-
-      /* Black Border */
-      ctx.strokeStyle = "#000000";
-      ctx.lineWidth = 4;
-      ctx.strokeRect(2,2,size-4,size-4);
-
-
-      /* Draw QR */
-      ctx.drawImage(canvas,20,20);
-
-
-      /* Download */
-      const a =
-        document.createElement("a");
-
-
-      a.download =
-        vpa.replace(/[^a-z0-9]/gi,"_") +
-        ".png";
-
-
-      a.href =
-        newCanvas.toDataURL("image/png");
-
-      a.click();
-
-    };
-
-
-    /* Append */
-    card.appendChild(label);
-    card.appendChild(qrWrapper);
-    card.appendChild(btn);
-
-    out.appendChild(card);
-
-  });
-
-}
-
-</script>
-
-</body>
-</html>
+Closed 
