--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,42 +23,10 @@ body{
     box-shadow:0 0 10px rgba(0,0,0,.1);
 }
 
-h3{
-    margin-top:0;
-}
-
-.input-group{
-    text-align:left;
-    margin-bottom:15px;
-}
-
-label{
-    font-weight:bold;
-}
-
 input{
     width:100%;
     padding:10px;
-    margin-top:5px;
-    border:1px solid #ccc;
-    border-radius:4px;
-    box-sizing:border-box;
-}
-
-.vpa-group{
-    display:flex;
-    align-items:center;
-    gap:5px;
-}
-
-.vpa-group input:first-child{
-    flex:1;
-}
-
-.handle{
-    width:70px;
-    background:#eee;
-    text-align:center;
+    margin:8px 0;
 }
 
 button{
@@ -68,13 +35,6 @@ button{
     background:#007bff;
     color:white;
     border:none;
-    border-radius:4px;
-    cursor:pointer;
-    margin-top:10px;
-}
-
-button:hover{
-    background:#0056b3;
 }
 
 #qr-box{
@@ -83,8 +43,6 @@ button:hover{
     border:3px solid black;
     display:inline-block;
     position:relative;
-    background:white;
-    border-radius:8px;
 }
 
 #logo{
@@ -97,10 +55,6 @@ button:hover{
     padding:3px;
     border-radius:6px;
 }
-
-#result{
-    text-align:center;
-}
 </style>
 </head>
 
@@ -108,54 +62,35 @@ button:hover{
 
 <div class="container">
 
-<h3>UPI QR Generator</h3>
+<h3>UPI QR</h3>
 
-<div class="input-group">
-<label>Name</label>
-<input id="name" placeholder="Enter Name">
-</div>
+<input id="name" placeholder="Name">
 
-<div class="input-group">
-<label>VPA</label>
+<input id="vpa" placeholder="VPA (example@ybl)">
 
-<div class="vpa-group">
-<input id="vpa" value="Q" placeholder="Enter ID">
-<span>@</span>
-<input value="ybl" readonly class="handle">
-</div>
-
-</div>
-
-<button onclick="makeQR()">Generate QR</button>
+<button onclick="makeQR()">Generate</button>
 
 <div id="result"></div>
 
 </div>
 
 
-<!-- Local QR Library (Put qrcode.min.js in same folder) -->
+<!-- LOCAL QR LIBRARY -->
 <script src="qrcode.min.js"></script>
 
 <script>
 function makeQR(){
 
-    let name = document.getElementById("name").value.trim();
-    let vpaPart = document.getElementById("vpa").value.trim();
+    let name = document.getElementById("name").value;
+    let vpa  = document.getElementById("vpa").value;
 
-    if(!vpaPart){
-        alert("Please enter VPA");
+    if(!vpa){
+        alert("Enter VPA");
         return;
     }
 
-    // Auto ensure Q at start
-    if(!vpaPart.startsWith("Q")){
-        vpaPart = "Q" + vpaPart;
-    }
-
-    let fullVPA = vpaPart + "@ybl";
-
     let upi =
-    `upi://pay?pa=${fullVPA}&pn=${encodeURIComponent(name)}`;
+    `upi://pay?pa=${vpa}&pn=${encodeURIComponent(name)}`;
 
     let box = document.getElementById("result");
 
@@ -169,9 +104,7 @@ function makeQR(){
     new QRCode(document.getElementById("qrcode"),{
         text: upi,
         width:180,
-        height:180,
-        colorDark:"#000000",
-        colorLight:"#ffffff"
+        height:180
     });
 }
 </script>
