--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ button{
     background:#007bff;
     color:white;
     border:none;
+    cursor:pointer;
 }
 
 #qr-box{
@@ -43,17 +44,6 @@ button{
     border:3px solid black;
     display:inline-block;
     position:relative;
-}
-
-#logo{
-    width:40px;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    background:white;
-    padding:3px;
-    border-radius:6px;
 }
 </style>
 </head>
@@ -66,7 +56,12 @@ button{
 
 <input id="name" placeholder="Name">
 
-<input id="vpa" placeholder="VPA (example@ybl)">
+<!-- VPA with default Q and fixed @ybl -->
+<div style="display:flex;align-items:center;gap:5px;">
+    <input id="vpa" value="Q" placeholder="Enter ID" style="flex:1;">
+    <span>@</span>
+    <input value="ybl" readonly style="width:70px;background:#eee;text-align:center;">
+</div>
 
 <button onclick="makeQR()">Generate</button>
 
@@ -81,23 +76,29 @@ button{
 <script>
 function makeQR(){
 
-    let name = document.getElementById("name").value;
-    let vpa  = document.getElementById("vpa").value;
+    let name = document.getElementById("name").value.trim();
+    let vpaPart = document.getElementById("vpa").value.trim();
 
-    if(!vpa){
+    if(!vpaPart){
         alert("Enter VPA");
         return;
     }
 
+    // Ensure Q at start
+    if(!vpaPart.startsWith("Q")){
+        vpaPart = "Q" + vpaPart;
+    }
+
+    let fullVPA = vpaPart + "@ybl";
+
     let upi =
-    `upi://pay?pa=${vpa}&pn=${encodeURIComponent(name)}`;
+    `upi://pay?pa=${fullVPA}&pn=${encodeURIComponent(name)}`;
 
     let box = document.getElementById("result");
 
     box.innerHTML = `
       <div id="qr-box">
         <div id="qrcode"></div>
-        <img id="logo" src="phonepe.png">
       </div>
     `;
 
